chore: Update hypridle and ssh config
Updates hypridle to avoid screen issues.

Signed-off-by: JoaoCostaIFG <joaocosta.work@posteo.net>

--- a/dot_config/hypr/hypridle.conf
+++ b/dot_config/hypr/hypridle.conf
@@ -31,11 +31,11 @@ listener {
     # screen off when timeout has passed
     on-timeout = hyprctl dispatch dpms off
     # screen on when activity is detected after timeout has fired.
-    on-resume = hyprctl dispatch dpms on ; xrandr --output "DP-1" --primary
+    on-resume = hyprctl dispatch dpms on
 }
 
 # suspend
-listener {
-    timeout = 1800                    # 30min
-    on-timeout = systemctl suspend    # suspend pc
-}
+# listener {
+#     timeout = 1800                    # 30min
+#     on-timeout = systemctl suspend    # suspend pc
+# }
