--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -414,6 +414,8 @@ exec-once = $uwsm_app ydotoold
 exec-once = $uwsm_app thunderbird
 # clipboard manager
 exec-once = $uwsm_app clipse -listen
+# password manager
+exec-once = $uwsm_app bitwarden-desktop
 # easy effects
 # exec-once = $uwsm_app easyeffects --gapplication-service
 
