feat: configure hypridle and add new keybinds
Reenables system suspend in hypridle after 30 minutes of
inactivity.

Adds keybinds for bitwarden and strawberry in hyprland.

Also clarifies comments to indicate fallback applications for
alacritty and firefox.

Signed-off-by: JoaoCostaIFG <joaocosta.work@posteo.net>

--- a/dot_config/hypr/hypridle.conf
+++ b/dot_config/hypr/hypridle.conf
@@ -26,16 +26,16 @@ listener {
 }
 
 # turn off monitors
-listener {
-    timeout = 700   # 11min
-    # screen off when timeout has passed
-    on-timeout = hyprctl dispatch dpms off
-    # screen on when activity is detected after timeout has fired.
-    on-resume = hyprctl dispatch dpms on
-}
+# listener {
+#     timeout = 700   # 11min
+#     # screen off when timeout has passed
+#     on-timeout = hyprctl dispatch dpms off
+#     # screen on when activity is detected after timeout has fired.
+#     on-resume = hyprctl dispatch dpms on
+# }
 
 # suspend
-# listener {
-#     timeout = 1800                    # 30min
-#     on-timeout = systemctl suspend    # suspend pc
-# }
+listener {
+    timeout = 1800                    # 30min
+    on-timeout = systemctl suspend    # suspend pc
+}
