--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -225,7 +225,7 @@ bind = $mod, B, exec, $uwsm_app killall -SIGUSR1 waybar
 #
 # terminal
 bind = $mod,        T, exec, $term
-bind = $mod+SHIFT,  T, exec, $uwsm_app alacritty # alacritty is the fallback term
+bind = $mod+SHIFT,  T, exec, $uwsm_app alacritty # the fallback term
 # app launcher
 bind = $mod, RETURN,  exec, $menu
 # other
@@ -234,13 +234,14 @@ bind = $mod,        C, exec, $term_exec numbat
 bind = $mod+SHIFT,  C, exec, $term_exec mmaxima
 bind = $mod,        V, exec, $term --class=com.joaocostaifg.clipse -e clipse
 bind = $mod,        E, exec, $uwsm_app thunderbird && hyprctl dispatch togglespecialworkspace thunderbird
+bind = $mod,        Y, exec, $uwsm_app bitwarden-desktop
 bind = $mod,        F, exec, $file_manager
 bind = $mod,        M, exec, $uwsm_app dmount
 bind = $mod,        N, exec, $uwsm_app joplin-desktop
 bind = $mod,        P, exec, $uwsm_app gimp
 bind = $mod,        R, exec, $uwsm_app $BROWSER
-bind = $mod+SHIFT,  R, exec, $uwsm_app firefox # firefox is the fallback browser
-bind = $mod,        S, exec, $term_exec ncmpcpp
+bind = $mod+SHIFT,  R, exec, $uwsm_app firefox # the fallback browser
+bind = $mod,        S, exec, $uwsm_app strawberry
 bind = $mod,        W, exec, $term_exec nvim
 
 #
