refactor: use windowrule instead of windowrulev2
Replaces deprecated `windowrulev2` with `windowrule` for
compatibility and correct rule application. This ensures
config works with newer Hyprland versions.

Signed-off-by: JoaoCostaIFG <joaocosta.work@posteo.net>

--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -149,29 +149,29 @@ misc {
 }
 
 # See https://wiki.hyprland.org/Configuring/Window-Rules
-windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
-windowrulev2 = stayfocused, title:^()$,class:^(steam)$
-windowrule = workspace special:thunderbird silent, thunderbird
+windowrule = suppressevent maximize, class:.* # You'll probably like this.
+windowrule = stayfocused, title:^()$,class:^(steam)$
+windowrule = workspace special:thunderbird, class:^(thunderbird)$
 # xwaylandvideobridge hide
-windowrulev2 = opacity 0.0 override, class:^(xwaylandvideobridge)$
-windowrulev2 = noanim, class:^(xwaylandvideobridge)$
-windowrulev2 = noinitialfocus, class:^(xwaylandvideobridge)$
-windowrulev2 = maxsize 1 1, class:^(xwaylandvideobridge)$
-windowrulev2 = noblur, class:^(xwaylandvideobridge)$
+windowrule = opacity 0.0 override, class:^(xwaylandvideobridge)$
+windowrule = noanim, class:^(xwaylandvideobridge)$
+windowrule = noinitialfocus, class:^(xwaylandvideobridge)$
+windowrule = maxsize 1 1, class:^(xwaylandvideobridge)$
+windowrule = noblur, class:^(xwaylandvideobridge)$
 # clipse floating window
-windowrulev2 = float,class:(com.joaocostaifg.clipse)
-windowrulev2 = size 622 652,class:(com.joaocostaifg.clipse)
+windowrule = float,class:(com.joaocostaifg.clipse)
+windowrule = size 622 652,class:(com.joaocostaifg.clipse)
 
 # "Smart gaps" / "No gaps when only"
 workspace = w[t1], gapsout:0, gapsin:0
 workspace = w[tg1], gapsout:0, gapsin:0
 workspace = f[1], gapsout:0, gapsin:0
-windowrulev2 = bordersize 0, floating:0, onworkspace:w[t1]
-windowrulev2 = rounding 0, floating:0, onworkspace:w[t1]
-windowrulev2 = bordersize 0, floating:0, onworkspace:w[tg1]
-windowrulev2 = rounding 0, floating:0, onworkspace:w[tg1]
-windowrulev2 = bordersize 0, floating:0, onworkspace:f[1]
-windowrulev2 = rounding 0, floating:0, onworkspace:f[1]
+windowrule = bordersize 0, floating:0, onworkspace:w[t1]
+windowrule = rounding 0, floating:0, onworkspace:w[t1]
+windowrule = bordersize 0, floating:0, onworkspace:w[tg1]
+windowrule = rounding 0, floating:0, onworkspace:w[tg1]
+windowrule = bordersize 0, floating:0, onworkspace:f[1]
+windowrule = rounding 0, floating:0, onworkspace:f[1]
 
 # See https://wiki.hyprland.org/Configuring/Workspace-Rules
 workspace = special:magic, on-created-empty:$term
