fix: thunderbird workspace rule should be silent
Signed-off-by: JoaoCostaIFG <joaocosta.work@posteo.net>

--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -151,7 +151,7 @@ misc {
 # See https://wiki.hyprland.org/Configuring/Window-Rules
 windowrule = suppressevent maximize, class:.* # You'll probably like this.
 windowrule = stayfocused, title:^()$,class:^(steam)$
-windowrule = workspace special:thunderbird, class:^(thunderbird)$
+windowrule = workspace special:thunderbird silent, class:^(thunderbird)$
 # xwaylandvideobridge hide
 windowrule = opacity 0.0 override, class:^(xwaylandvideobridge)$
 windowrule = noanim, class:^(xwaylandvideobridge)$
@@ -233,7 +233,7 @@ bind = $mod,        A, exec, $term_exec ikhal
 bind = $mod,        C, exec, $term_exec numbat
 bind = $mod+SHIFT,  C, exec, $term_exec mmaxima
 bind = $mod,        V, exec, $term --class=com.joaocostaifg.clipse -e clipse
-bind = $mod,        E, exec, $uwsm_app thunderbird && hyprctl dispatch togglespecialworkspace thunderbird
+bind = $mod,        E, togglespecialworkspace, thunderbird
 bind = $mod,        Y, exec, $uwsm_app bitwarden-desktop
 bind = $mod,        F, exec, $file_manager
 bind = $mod,        M, exec, $uwsm_app dmount
