--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -146,12 +146,15 @@ misc {
 
     animate_manual_resizes = true
     animate_mouse_windowdragging = true
+
+    enable_anr_dialog = false
 }
 
 # See https://wiki.hyprland.org/Configuring/Window-Rules
 windowrule = suppressevent maximize, class:.* # You'll probably like this.
 windowrule = stayfocused, title:^()$,class:^(steam)$
 windowrule = workspace special:thunderbird silent, class:^(thunderbird)$
+windowrule = workspace special:bitwarden silent, class:^(Bitwarden)$
 # xwaylandvideobridge hide
 windowrule = opacity 0.0 override, class:^(xwaylandvideobridge)$
 windowrule = noanim, class:^(xwaylandvideobridge)$
@@ -234,7 +237,7 @@ bind = $mod,        C, exec, $term_exec numbat
 bind = $mod+SHIFT,  C, exec, $term_exec mmaxima
 bind = $mod,        V, exec, $term --class=com.joaocostaifg.clipse -e clipse
 bind = $mod,        E, togglespecialworkspace, thunderbird
-bind = $mod,        Y, exec, $uwsm_app bitwarden-desktop
+bind = $mod,        Y, togglespecialworkspace, bitwarden
 bind = $mod,        F, exec, $file_manager
 bind = $mod,        M, exec, $uwsm_app dmount
 bind = $mod,        N, exec, $uwsm_app joplin-desktop
