feat: enhance hyprlock configuration with new features
Adds time, date, user information, and current song details to
hyprlock.  Changes default wallpaper. This provides a more
informative and visually appealing lock screen.

Signed-off-by: JoaoCostaIFG <joaocosta.work@posteo.net>

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -8,6 +8,7 @@
     ~/.gnupg/gpg-agent.conf: homedir/dot_gnupg/gpg-agent.conf
     ~/.bash_profile: homedir/dot_bash_profile
     ~/.bashrc: homedir/dot_bashrc
+    ~/.face: homedir/dot_face
     ~/.profile: homedir/dot_profile
     ~/.Xdefaults: homedir/dot_Xdefaults
     ~/.icons: homedir/dot_icons
