--- a/dot_config/hypr/hyprlock.conf
+++ b/dot_config/hypr/hyprlock.conf
@@ -1,46 +1,95 @@
+# BACKGROUND
 background {
     monitor =
-    # path = ~/.local/share/wallpaper/anorlondo/anorlondo.png
-    # color = rgba(0, 0, 0, 0.7)
-    path = screenshot
-
-    # all these options are taken from hyprland, see https://wiki.hyprland.org/Configuring/Variables/#blur for explanations
-    blur_passes = 2 # 0 disables blurring
-    blur_size = 3
-    noise = 0.0
+    path = ~/.local/share/wallpaper/majula.jpg
+    blur_passes = 2
     contrast = 0.8916
     brightness = 0.8172
     vibrancy = 0.1696
     vibrancy_darkness = 0.0
 }
 
+# GENERAL
+general {
+    grace = 5
+}
+
+# INPUT FIELD
 input-field {
     monitor =
-    size = 200, 50
-    outline_thickness = 3
-    dots_size = 0.33 # Scale of input-field height, 0.2 - 0.8
-    dots_spacing = 0.15 # Scale of dots' absolute size, 0.0 - 1.0
-    dots_center = false
-    dots_rounding = -1 # -1 default circle, -2 follow input-field rounding
-    outer_color = rgb(151515)
-    inner_color = rgb(200, 200, 200)
-    font_color = rgb(10, 10, 10)
-    fade_on_empty = true
-    fade_timeout = 1000 # Milliseconds before fade_on_empty is triggered.
-    placeholder_text = <i>Input Password...</i> # Text rendered in the input box when it's empty.
+    size = 250, 60
+    outline_thickness = 2
+    dots_size = 0.2 # Scale of input-field height, 0.2 - 0.8
+    dots_spacing = 0.2 # Scale of dots' absolute size, 0.0 - 1.0
+    dots_center = true
+    outer_color = rgba(0, 0, 0, 0)
+    inner_color = rgba(100, 114, 125, 0.4)
+    font_color = rgb(200, 200, 200)
+    fade_on_empty = false
+    placeholder_text = <i><span foreground="##ffffff99">Enter Pass</span></i>
     hide_input = false
-    rounding = -1 # -1 means complete rounding (circle/oval)
-    check_color = rgb(204, 136, 34)
-    fail_color = rgb(204, 34, 34) # if authentication failed, changes outer_color and fail message color
-    fail_text = <i>$FAIL <b>($ATTEMPTS)</b></i> # can be set to empty
-    fail_transition = 300 # transition time in ms between normal outer_color and fail_color
-    capslock_color = -1
-    numlock_color = -1
-    bothlock_color = -1 # when both locks are active. -1 means don't change outer color (same for above)
-    invert_numlock = false # change color if numlock is off
-    swap_font_color = false # see below
+    position = 0, -225
+    halign = center
+    valign = center
+}
 
+# Time
+label {
+    monitor =
+    text = cmd[update:1000] echo "<span>$(date +"%H:%M")</span>"
+    color = rgba(216, 222, 233, 0.70)
+    font_size = 130
+    position = 0, 240
+    halign = center
+    valign = center
+}
+
+# Day-Month-Date
+label {
+    monitor =
+    text = cmd[update:1000] echo "$(date +"%A, %d %B")"
+    color = rgba(216, 222, 233, 0.70)
+    font_size = 30
+    position = 0, 105
+    halign = center
+    valign = center
+}
+
+# Profie-Photo
+image {
+    monitor =
+    path = ~/.face
+    border_color = 0xffdddddd
+    border_size = 0
+    size = 120
+    rounding = -1
+    rotate = 0
+    reload_time = -1
+    reload_cmd = 
     position = 0, -20
     halign = center
     valign = center
 }
+
+# USER
+label {
+    monitor =
+    text = Hi, $USER
+    color = rgba(216, 222, 233, 0.70)
+    font_size = 25
+    position = 0, -130
+    halign = center
+    valign = center
+}
+
+# CURRENT SONG
+label {
+    monitor =
+    text = cmd[update:1000] echo "$(~/.config/hypr/scripts/songdetail.sh)" 
+    color = rgba(255, 255, 255, 0.7)
+    font_size = 18
+    position = 0, 60
+    halign = center
+    valign = bottom
+}
+
