--- a/dot_config/qt6ct/qt6ct.conf
+++ b/dot_config/qt6ct/qt6ct.conf
@@ -1,8 +1,9 @@
 [Appearance]
-color_scheme_path=/usr/share/qt6ct/colors/airy.conf
-custom_palette=false
+color_scheme_path=/usr/share/qt6ct/colors/darker.conf
+custom_palette=true
+icon_theme=breeze-dark
 standard_dialogs=default
-style=kvantum-dark
+style=Breeze
 
 [Fonts]
 fixed="Monospace,12,-1,5,400,0,0,0,0,0,0,0,0,0,0,1"
@@ -24,7 +25,7 @@ underline_shortcut=1
 wheel_scroll_lines=3
 
 [SettingsWindow]
-geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\x4\x38\0\0\x1\xe0\0\0\t/\0\0\x4\x97\0\0\x4\x38\0\0\x1\xe0\0\0\t7\0\0\x4\x9f\0\0\0\0\x2\0\0\0\n\0\0\0\x4\x38\0\0\x1\xe0\0\0\t/\0\0\x4\x97)
+geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\x4\x38\0\0\x1\xe0\0\0\t/\0\0\x4\x97\0\0\x4\x38\0\0\x1\xe0\0\0\t/\0\0\x4\x97\0\0\0\0\x2\0\0\0\n\0\0\0\x4\x38\0\0\x1\xe0\0\0\t/\0\0\x4\x97)
 
 [Troubleshooting]
 force_raster_widgets=1
