--- a/dot_config/xsettingsd/xsettingsd.conf
+++ b/dot_config/xsettingsd/xsettingsd.conf
@@ -1,5 +1,5 @@
-Net/ThemeName "Arc-Dark-solid"
-Net/IconThemeName "Arc"
+Net/ThemeName "Breeze-Dark"
+Net/IconThemeName "breeze-dark"
 Gtk/CursorThemeName "Adwaita"
 Net/EnableEventSounds 1
 EnableInputFeedbackSounds 0
