--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -239,6 +239,7 @@ bind = $mod,        V, exec, $term --class=com.joaocostaifg.clipse -e clipse
 bind = $mod,        E, togglespecialworkspace, thunderbird
 bind = $mod,        Y, togglespecialworkspace, bitwarden
 bind = $mod,        F, exec, $file_manager
+bind = $mod+SHIFT,  F, exec, $uwsm_app dolphin
 bind = $mod,        M, exec, $uwsm_app dmount
 bind = $mod,        N, exec, $uwsm_app joplin-desktop
 bind = $mod,        P, exec, $uwsm_app gimp
