hypr: disable pentablet thing
Signed-off-by: JoaoCostaIFG <joaocosta.work@posteo.net>

--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -426,4 +426,4 @@ exec-once = $uwsm_app bitwarden-desktop
 # open rgb sakura theme
 exec-once = $uwsm_app openrgb -p Sakura
 # XPPen drawing table
-exec-once = $uwsm_app QT_QPA_PLATFORM="xcb" /usr/lib/pentablet/PenTablet.sh /mini
+# exec-once = $uwsm_app QT_QPA_PLATFORM="xcb" /usr/lib/pentablet/PenTablet.sh /mini
