feat: Autostart Bluetooth manager (blueman-applet)
Adds blueman-applet to the autostart list in Hyprland config.

Signed-off-by: JoaoCostaIFG <joaocosta.work@posteo.net>

--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -419,6 +419,8 @@ exec-once = $uwsm_app thunderbird
 exec-once = $uwsm_app clipse -listen
 # password manager
 exec-once = $uwsm_app bitwarden-desktop
+# bluetooth manager
+exec-once = $uwsm_app blueman-applet
 # easy effects
 # exec-once = $uwsm_app easyeffects --gapplication-service
 
