feat: Add GPG configuration for Yubikey smartcard
Adds gpg.conf and scdaemon.conf to configure GPG.

- Enables SSH support in gpg-agent.
- Configures GPG with strong cipher and digest preferences.
- Sets up scdaemon for smartcard support.

Signed-off-by: JoaoCostaIFG <joaocosta.work@posteo.net>

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -5,7 +5,9 @@
 - clean: ["~"]
 
 - link:
+    ~/.gnupg/gpg.conf: homedir/dot_gnupg/gpg.conf
     ~/.gnupg/gpg-agent.conf: homedir/dot_gnupg/gpg-agent.conf
+    ~/.gnupg/scdaemon.conf: homedir/dot_gnupg/scdaemon.conf
     ~/.bash_profile: homedir/dot_bash_profile
     ~/.bashrc: homedir/dot_bashrc
     ~/.face: homedir/dot_face
