--- a/dot_config/swaync/config.json
+++ b/dot_config/swaync/config.json
@@ -2,32 +2,48 @@
   "$schema": "/etc/xdg/swaync/configSchema.json",
   "positionX": "right",
   "positionY": "top",
-  "layer": "top",
-  "cssPriority": "application",
+  "layer": "overlay",
+  "control-center-layer": "top",
+  "layer-shell": true,
+  "layer-shell-cover-screen": true,
+  "cssPriority": "user",
   "control-center-margin-top": 0,
   "control-center-margin-bottom": 0,
   "control-center-margin-right": 0,
   "control-center-margin-left": 0,
-  "notification-icon-size": 48,
+  "notification-2fa-action": true,
+  "notification-inline-replies": false,
   "notification-body-image-height": 100,
   "notification-body-image-width": 200,
   "timeout": 10,
   "timeout-low": 5,
   "timeout-critical": 0,
   "fit-to-screen": true,
+  "relative-timestamps": true,
   "control-center-width": 500,
   "control-center-height": 600,
-  "notification-window-width": 400,
+  "notification-window-width": 500,
   "keyboard-shortcuts": true,
+  "notification-grouping": true,
   "image-visibility": "when-available",
   "transition-time": 200,
   "hide-on-clear": false,
   "hide-on-action": true,
+  "text-empty": "No Notifications",
   "script-fail-notify": true,
-  "scripts": {},
-  "notification-visibility": {},
-  "widgets": ["title", "dnd", "mpris", "notifications"],
+  "widgets": [
+    "inhibitors",
+    "title",
+    "dnd",
+    "mpris",
+    "notifications"
+  ],
   "widget-config": {
+    "inhibitors": {
+      "text": "Inhibitors",
+      "button-text": "Clear All",
+      "clear-all-button": true
+    },
     "title": {
       "text": "Notifications",
       "clear-all-button": true,
@@ -35,6 +51,10 @@
     },
     "dnd": {
       "text": "Do Not Disturb"
+    },
+    "mpris": {
+      "show-album-art": "always",
+      "loop-carousel": false
     }
   }
 }
