--- a/dot_config/swaync/config.json
+++ b/dot_config/swaync/config.json
@@ -2,33 +2,33 @@
   "$schema": "/etc/xdg/swaync/configSchema.json",
   "positionX": "right",
   "positionY": "top",
+  "cssPriority": "user",
   "layer": "overlay",
   "control-center-layer": "top",
   "layer-shell": true,
   "layer-shell-cover-screen": true,
-  "cssPriority": "user",
-  "control-center-margin-top": 0,
-  "control-center-margin-bottom": 0,
-  "control-center-margin-right": 0,
+  "control-center-width": 400,
+  "control-center-height": 850,
+  "control-center-margin-top": 15,
+  "control-center-margin-bottom": 15,
+  "control-center-margin-right": 10,
   "control-center-margin-left": 0,
   "notification-2fa-action": true,
   "notification-inline-replies": false,
-  "notification-body-image-height": 100,
+  "notification-window-width": 380,
+  "notification-body-image-height": 200,
   "notification-body-image-width": 200,
-  "timeout": 10,
-  "timeout-low": 5,
+  "timeout": 8,
+  "timeout-low": 6,
   "timeout-critical": 0,
   "fit-to-screen": true,
   "relative-timestamps": true,
-  "control-center-width": 500,
-  "control-center-height": 600,
-  "notification-window-width": 500,
   "keyboard-shortcuts": true,
   "notification-grouping": true,
   "image-visibility": "when-available",
   "transition-time": 200,
-  "hide-on-clear": false,
-  "hide-on-action": true,
+  "hide-on-clear": true,
+  "hide-on-action": false,
   "text-empty": "No Notifications",
   "script-fail-notify": true,
   "widgets": [
@@ -48,7 +48,12 @@
     },
     "mpris": {
       "show-album-art": "always",
-      "loop-carousel": false
+      "loop-carousel": false,
+      "image-size": 50,
+      "image-radius": 0,
+      "blacklist": [
+        "playerctld"
+      ]
     },
     "volume": {
       "label": " 󰕾 ",
