fix(hyprland): change file manager thunar
dolphin outside kde just keeps giving me problems.

Signed-off-by: JoaoCostaIFG <joaocosta.work@posteo.net>

--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -237,7 +237,7 @@ bind = $mod+SHIFT,  C, exec, $term_exec mmaxima
 bind = $mod,        V, exec, $term --class=com.joaocostaifg.clipse -e clipse
 bind = $mod,        E, togglespecialworkspace, thunderbird
 bind = $mod,        F, exec, $file_manager
-bind = $mod+SHIFT,  F, exec, $uwsm_app dolphin
+bind = $mod+SHIFT,  F, exec, $uwsm_app thunar
 bind = $mod,        M, exec, $uwsm_app dmount
 bind = $mod,        N, exec, $uwsm_app joplin-desktop
 bind = $mod,        P, exec, $uwsm_app gimp
