--- a/dot_config/swaync/config.json
+++ b/dot_config/swaync/config.json
@@ -64,7 +64,8 @@
       "show-per-app-label": false
     },
     "backlight": {
-      "label": "󰃟 "
+      "label": "󰃟 ",
+      "device": "ddcci8"
     },
     "dnd": {
       "text": "Do Not Disturb"
