theme: use catppuccin for qt and gtk
Signed-off-by: JoaoCostaIFG <joaocosta.work@posteo.net>

--- a/dot_config/qt6ct/qt6ct.conf
+++ b/dot_config/qt6ct/qt6ct.conf
@@ -1,9 +1,9 @@
 [Appearance]
-color_scheme_path=/usr/share/qt6ct/colors/darker.conf
+color_scheme_path=/home/joao/.config/qt6ct/style-colors.conf
 custom_palette=true
-icon_theme=breeze-dark
+icon_theme=Catppuccin-Mocha
 standard_dialogs=default
-style=Breeze
+style=kvantum-dark
 
 [Fonts]
 fixed="Monospace,12,-1,5,400,0,0,0,0,0,0,0,0,0,0,1"
