--- a/dot_config/qt5ct/qt5ct.conf
+++ b/dot_config/qt5ct/qt5ct.conf
@@ -25,7 +25,7 @@ underline_shortcut=1
 wheel_scroll_lines=3
 
 [SettingsWindow]
-geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\x4\x38\0\0\x1\xe0\0\0\t/\0\0\x4\x97\0\0\0\0\0\0\0\0\0\0\x4\xf7\0\0\x2\xb7\0\0\0\0\x2\0\0\0\n\0\0\0\x4\x38\0\0\x1\xe0\0\0\t/\0\0\x4\x97)
+geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\0\0\0\0\0\0\0\x4\xf7\0\0\x2\xb7\0\0\0\0\0\0\0\0\0\0\x4\xf7\0\0\x2\xb7\0\0\0\x1\x2\0\0\0\x4\x38\0\0\0\0\0\0\0\0\0\0\x4\xf7\0\0\x2\xb7)
 
 [Troubleshooting]
 force_raster_widgets=1
