--- a/dot_config/xsettingsd/xsettingsd.conf
+++ b/dot_config/xsettingsd/xsettingsd.conf
@@ -1,5 +1,5 @@
-Net/ThemeName "Breeze-Dark"
-Net/IconThemeName "breeze-dark"
+Net/ThemeName "Catppuccin-Dark"
+Net/IconThemeName "Catppuccin-Mocha"
 Gtk/CursorThemeName "Adwaita"
 Net/EnableEventSounds 1
 EnableInputFeedbackSounds 0
