chore: update fish and hypridle configurations
Adds QT_STYLE_OVERRIDE to fish shell configuration for consistent
QT theming. Updates hypridle to execute OpenRGB profile on resume
from suspend.

Signed-off-by: JoaoCostaIFG <joaocosta.work@posteo.net>

--- a/dot_config/hypr/hypridle.conf
+++ b/dot_config/hypr/hypridle.conf
@@ -38,4 +38,5 @@ listener {
 listener {
     timeout = 1800                    # 30min
     on-timeout = systemctl suspend    # suspend pc
+    on-resume = openrgb -p Sakura
 }
