feat: add dotbot-gh-extension submodule
Include the dotbot-gh-extension submodule to extend functionality
for managing GitHub-cli related configurations.

Signed-off-by: JoaoCostaIFG <joaocosta.work@posteo.net>

--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,6 @@
 	path = dotbot
 	url = https://github.com/anishathalye/dotbot
   branch = v1.21.0
+[submodule "dotbot-gh-extension"]
+	path = dotbot-gh-extension
+	url = https://github.com/fundor333/dotbot-gh-extension.git
