--- a/.gitmodules
+++ b/.gitmodules
@@ -1,7 +1,7 @@
 [submodule "dotbot"]
-	path = dotbot
+	path = submodules/dotbot
 	url = https://github.com/anishathalye/dotbot
   branch = v1.21.0
 [submodule "dotbot-gh-extension"]
-	path = dotbot-gh-extension
+	path = submodules/dotbot-gh-extension
 	url = https://github.com/fundor333/dotbot-gh-extension.git
