feat(hyprland): change fallback terminal to foot
Signed-off-by: JoaoCostaIFG <joaocosta.work@posteo.net>

--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -227,7 +227,7 @@ bind = $mod, B, exec, $uwsm_app killall -SIGUSR1 waybar
 #
 # terminal
 bind = $mod,        T, exec, $term
-bind = $mod+SHIFT,  T, exec, $uwsm_app alacritty # the fallback term
+bind = $mod+SHIFT,  T, exec, $uwsm_app foot # the fallback term
 # app launcher
 bind = $mod, RETURN,  exec, $menu
 # other
