fix: update default browser to firefox in fish config
Signed-off-by: JoaoCostaIFG <joaocosta.work@posteo.net>

--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -242,7 +242,7 @@ bind = $mod,        M, exec, $uwsm_app dmount
 bind = $mod,        N, exec, $uwsm_app joplin-desktop
 bind = $mod,        P, exec, $uwsm_app gimp
 bind = $mod,        R, exec, $uwsm_app $BROWSER
-bind = $mod+SHIFT,  R, exec, $uwsm_app firefox # the fallback browser
+bind = $mod+SHIFT,  R, exec, $uwsm_app chromium # the fallback browser
 bind = $mod,        S, exec, $uwsm_app strawberry
 bind = $mod,        W, exec, $term_exec nvim
 
