feat(user-overrides): add custom homepage preference
Add a new user preference to set the browser startup homepage. This
provides users with a default homepage for better customization.

Signed-off-by: JoaoCostaIFG <joaocosta.work@posteo.net>

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -2,7 +2,10 @@
     link:
       relink: true
 
-- clean: ["~"]
+- clean:
+    ~/:
+    ~/.config:
+      recursive: true
 
 - link:
     ~/.gnupg/gpg.conf: homedir/dot_gnupg/gpg.conf
