feat: replace walker with fuzzel
walker 1.0 changed a lot of stuff and is giving me too much trouble.

Signed-off-by: JoaoCostaIFG <joaocosta.work@posteo.net>

--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -16,12 +16,12 @@ plugin {
 }
 
 # Set programs that you use
-$uwsm_app = uwsm app --
-$term = $uwsm_app $TERMINAL
-$term_exec = $uwsm_app $TERMINAL_EXEC
+$run_app = app2unit --
+$term = $run_app $TERMINAL
+$term_exec = $run_app $TERMINAL_EXEC
 $file_manager = $term_exec lfcd_sh
-# $menu = $uwsm_app mdmenu_run | xargs hyprctl dispatch exec --
-$menu = $uwsm_app walker
+# $menu = $run_app mdmenu_run | xargs hyprctl dispatch exec --
+$menu = $run_app fuzzel
 
 # Some default env vars.
 # these XDG vars should be set automatically but we set them here as well (just in case)
@@ -211,23 +211,23 @@ $mod = SUPER
 # so I added the killall cmd.
 bind = $mod+SHIFT+CONTROL, Q, exec, uwsm stop
 # reload Hyprland
-bind = $mod+SHIFT+CONTROL, R, exec, $uwsm_app hyprctl reload
+bind = $mod+SHIFT+CONTROL, R, exec, $run_app hyprctl reload
 # kill focused window
 bind = ALT, F4, killactive,
 bind = $mod, Q, killactive,
 # lock screen
-bind = $mod, F11, exec, $uwsm_app loginctl lock-session
+bind = $mod, F11, exec, $run_app loginctl lock-session
 # suspend
-bind = $mod, F12, exec, $uwsm_app systemctl suspend
+bind = $mod, F12, exec, $run_app systemctl suspend
 # toggle bar
-bind = $mod, B, exec, $uwsm_app killall -SIGUSR1 waybar
+bind = $mod, B, exec, $run_app killall -SIGUSR1 waybar
 
 #
 # Apps:
 #
 # terminal
 bind = $mod,        T, exec, $term
-bind = $mod+SHIFT,  T, exec, $uwsm_app foot # the fallback term
+bind = $mod+SHIFT,  T, exec, $run_app foot # the fallback term
 # app launcher
 bind = $mod, RETURN,  exec, $menu
 # other
@@ -237,68 +237,68 @@ bind = $mod+SHIFT,  C, exec, $term_exec mmaxima
 bind = $mod,        V, exec, $term --class=com.joaocostaifg.clipse -e clipse
 bind = $mod,        E, togglespecialworkspace, thunderbird
 bind = $mod,        F, exec, $file_manager
-bind = $mod+SHIFT,  F, exec, $uwsm_app thunar
-bind = $mod,        M, exec, $uwsm_app dmount
-bind = $mod,        N, exec, $uwsm_app joplin-desktop
-bind = $mod,        P, exec, $uwsm_app gimp
-bind = $mod,        R, exec, $uwsm_app $BROWSER
-bind = $mod+SHIFT,  R, exec, $uwsm_app chromium # the fallback browser
-bind = $mod,        S, exec, $uwsm_app strawberry
+bind = $mod+SHIFT,  F, exec, $run_app thunar
+bind = $mod,        M, exec, $run_app dmount
+bind = $mod,        N, exec, $run_app joplin
+bind = $mod,        P, exec, $run_app gimp
+bind = $mod,        R, exec, $run_app $BROWSER
+bind = $mod+SHIFT,  R, exec, $run_app chromium # the fallback browser
+bind = $mod,        S, exec, $run_app strawberry
 bind = $mod,        W, exec, $term_exec nvim
 
 #
 # Media keys:
 #
 # audio
-bind = $mod,          F1, exec, $uwsm_app pactl set-sink-mute @DEFAULT_SINK@ toggle
-bind = $mod,          F2, exec, $uwsm_app pactl set-sink-volume @DEFAULT_SINK@ -5%
-bind = $mod,          F3, exec, $uwsm_app pactl set-sink-volume @DEFAULT_SINK@ +5%
-bind = $mod+SHIFT,    F1, exec, $uwsm_app pactl set-source-mute @DEFAULT_SOURCE@ toggle
-bind = $mod+CONTROL,  F1, exec, $uwsm_app next_sink.sh
+bind = $mod,          F1, exec, $run_app pactl set-sink-mute @DEFAULT_SINK@ toggle
+bind = $mod,          F2, exec, $run_app pactl set-sink-volume @DEFAULT_SINK@ -5%
+bind = $mod,          F3, exec, $run_app pactl set-sink-volume @DEFAULT_SINK@ +5%
+bind = $mod+SHIFT,    F1, exec, $run_app pactl set-source-mute @DEFAULT_SOURCE@ toggle
+bind = $mod+CONTROL,  F1, exec, $run_app next_sink.sh
 #
-bind = ,      XF86AudioMute,        exec, $uwsm_app pactl set-sink-mute @DEFAULT_SINK@ toggle
-bind = ,      XF86AudioLowerVolume, exec, $uwsm_app pactl set-sink-volume @DEFAULT_SINK@ -5%
-bind = ,      XF86AudioRaiseVolume, exec, $uwsm_app pactl set-sink-volume @DEFAULT_SINK@ +5%
-bind = ,      XF86AudioMicMute,     exec, $uwsm_app pactl set-source-mute @DEFAULT_SOURCE@ toggle
-bind = SHIFT, XF86AudioMute,     exec, $uwsm_app pactl set-source-mute @DEFAULT_SOURCE@ toggle
+bind = ,      XF86AudioMute,        exec, $run_app pactl set-sink-mute @DEFAULT_SINK@ toggle
+bind = ,      XF86AudioLowerVolume, exec, $run_app pactl set-sink-volume @DEFAULT_SINK@ -5%
+bind = ,      XF86AudioRaiseVolume, exec, $run_app pactl set-sink-volume @DEFAULT_SINK@ +5%
+bind = ,      XF86AudioMicMute,     exec, $run_app pactl set-source-mute @DEFAULT_SOURCE@ toggle
+bind = SHIFT, XF86AudioMute,     exec, $run_app pactl set-source-mute @DEFAULT_SOURCE@ toggle
 # display
-bind = $mod, F4, exec, $uwsm_app brightnessctl -c backlight set 5%-
-bind = $mod, F5, exec, $uwsm_app brightnessctl -c backlight set 5%+
+bind = $mod, F4, exec, $run_app brightnessctl -c backlight set 5%-
+bind = $mod, F5, exec, $run_app brightnessctl -c backlight set 5%+
 #
-bind = , XF86MonBrightnessDown, exec, $uwsm_app brightnessctl -c backlight set 5%-
-bind = , XF86MonBrightnessUp, exec, $uwsm_app brightnessctl -c backlight set 5%+
+bind = , XF86MonBrightnessDown, exec, $run_app brightnessctl -c backlight set 5%-
+bind = , XF86MonBrightnessUp, exec, $run_app brightnessctl -c backlight set 5%+
 # media
-bind = $mod, F6, exec, $uwsm_app playerctl play-pause
-bind = $mod+SHIFT, F6, exec, $uwsm_app playerctl position 0
-bind = $mod, F7, exec, $uwsm_app playerctl previous
-bind = $mod+SHIFT, F7, exec, $uwsm_app playerctl volume 0.05-
-bind = $mod, F8, exec, $uwsm_app playerctl next
-bind = $mod+SHIFT, F8, exec, $uwsm_app playerctl volume 0.05+
+bind = $mod, F6, exec, $run_app playerctl play-pause
+bind = $mod+SHIFT, F6, exec, $run_app playerctl position 0
+bind = $mod, F7, exec, $run_app playerctl previous
+bind = $mod+SHIFT, F7, exec, $run_app playerctl volume 0.05-
+bind = $mod, F8, exec, $run_app playerctl next
+bind = $mod+SHIFT, F8, exec, $run_app playerctl volume 0.05+
 #
-bind = , XF86AudioPlay, exec, $uwsm_app playerctl play-pause
-bind = SHIFT, XF86AudioPlay, exec, $uwsm_app playerctl position 0
-bind = , XF86AudioPrev, exec, $uwsm_app playerctl previous
-bind = SHIFT, XF86AudioPrev, exec, $uwsm_app playerctl volume 0.05-
-bind = , XF86AudioNext, exec, $uwsm_app playerctl next
-bind = SHIFT, XF86AudioNext, exec, $uwsm_app playerctl volume 0.05+
+bind = , XF86AudioPlay, exec, $run_app playerctl play-pause
+bind = SHIFT, XF86AudioPlay, exec, $run_app playerctl position 0
+bind = , XF86AudioPrev, exec, $run_app playerctl previous
+bind = SHIFT, XF86AudioPrev, exec, $run_app playerctl volume 0.05-
+bind = , XF86AudioNext, exec, $run_app playerctl next
+bind = SHIFT, XF86AudioNext, exec, $run_app playerctl volume 0.05+
 #
 bind = , XF86Search, exec, $menu
 
 #
 # Notifications:
 #
-bind = $mod,          F10, exec, $uwsm_app swaync-client -d -sw # toggle dnd
-bind = $mod,          backspace, exec, $uwsm_app swaync-client --close-latest -sw # dismiss last
-bind = $mod+SHIFT,    backspace, exec, $uwsm_app swaync-client --close-all -sw # dismiss all
-bind = $mod+CONTROL,  backspace, exec, $uwsm_app swaync-client -t -sw # show notifications
+bind = $mod,          F10, exec, $run_app swaync-client -d -sw # toggle dnd
+bind = $mod,          backspace, exec, $run_app swaync-client --close-latest -sw # dismiss last
+bind = $mod+SHIFT,    backspace, exec, $run_app swaync-client --close-all -sw # dismiss all
+bind = $mod+CONTROL,  backspace, exec, $run_app swaync-client -t -sw # show notifications
 
 #
 # Screenshots:
 #
-bind = $mod+SHIFT,  S, exec, $uwsm_app killall slurp; screenshots "snip"
-bind = ,            Print, exec, $uwsm_app killall slurp; screenshots "snip-edit"
-bind = $mod,        Print, exec, $uwsm_app screenshots
-bind = $mod+SHIFT,  Print, exec, $uwsm_app screenshots "current-save"
+bind = $mod+SHIFT,  S, exec, $run_app killall slurp; screenshots "snip"
+bind = ,            Print, exec, $run_app killall slurp; screenshots "snip-edit"
+bind = $mod,        Print, exec, $run_app screenshots
+bind = $mod+SHIFT,  Print, exec, $run_app screenshots "current-save"
 
 #
 # Movement:
@@ -381,40 +381,38 @@ submap = reset
 
 # Autoruns
 # X11 theme stuff
-exec-once = $uwsm_app xrdb -load "$HOME/.Xdefaults"
+exec-once = $run_app xrdb -load "$HOME/.Xdefaults"
 # theme settings for GTK 4
-exec-once = $uwsm_app import-gsettings
+exec-once = $run_app import-gsettings
 
 # top bar
-exec-once = $uwsm_app waybar
+exec-once = $run_app waybar
 # wallpaper
-exec-once = $uwsm_app hyprpaper
+exec-once = $run_app hyprpaper
 # idle manager
-exec-once = $uwsm_app hypridle
+exec-once = $run_app hypridle
 # for screen brightness and stuff
-exec-once = $uwsm_app hyprsunset
+exec-once = $run_app hyprsunset
 # polkit agent
-exec-once = $uwsm_app /usr/lib/hyprpolkitagent/hyprpolkitagent
+exec-once = $run_app /usr/lib/hyprpolkitagent/hyprpolkitagent
 # notification agent
-exec-once = $uwsm_app swaync
-# menu
-exec-once = $uwsm_app walker --gapplication-service
+exec-once = $run_app swaync
 # udiskie for automount
-exec-once = $uwsm_app udiskie
+exec-once = $run_app udiskie
 # playerctl daemon
-exec-once = $uwsm_app playerctld
+exec-once = $run_app playerctld
 
 # email client
-exec-once = $uwsm_app thunderbird
+exec-once = $run_app thunderbird
 # clipboard manager
-exec-once = $uwsm_app clipse -listen
+exec-once = $run_app clipse -listen
 # bluetooth manager
-exec-once = $uwsm_app blueman-applet
+exec-once = $run_app blueman-applet
 # easy effects
-# exec-once = $uwsm_app easyeffects --gapplication-service
+# exec-once = $run_app easyeffects --gapplication-service
 
 # ifgdt apps
 # open rgb sakura theme
-exec-once = $uwsm_app openrgb -p Sakura
+exec-once = $run_app openrgb -p Sakura
 # XPPen drawing table
-# exec-once = $uwsm_app QT_QPA_PLATFORM="xcb" /usr/lib/pentablet/PenTablet.sh /mini
+# exec-once = $run_app QT_QPA_PLATFORM="xcb" /usr/lib/pentablet/PenTablet.sh /mini
