refactor(hypr): modularize hyprland configuration
Split hyprland.conf into separate modular files in conf.d/
directory to improve maintainability and organization. Move
ifgdt_monitors.conf to override.d/ directory for better
configuration hierarchy.

Signed-off-by: JoaoCostaIFG <me@joaocosta.dev>

--- a/dot_config/git/config
+++ b/dot_config/git/config
@@ -1,5 +1,5 @@
 [user]
-  email = joaocosta.work@posteo.net
+  email = me@joaocosta.dev
   name = JoaoCostaIFG
   signingKey = 0x4DCA5163F4FFE6A2DDBD087AE709F16FAE6D1C2B
 [credential]
