fix(hypr): usage of vars
Signed-off-by: JoaoCostaIFG <me@joaocosta.dev>

--- a/dot_config/hypr/conf.d/apps.conf
+++ b/dot_config/hypr/conf.d/apps.conf
@@ -1,4 +1,11 @@
+# Set programs that you use
 $run_app = app2unit --
+$term = $run_app $TERMINAL
+$term_exec = $run_app $TERMINAL_EXEC
+$file_manager = $term_exec lfcd_sh
+# $menu = $run_app mdmenu_run | xargs hyprctl dispatch exec --
+$menu = $run_app fuzzel
+
 
 # Autoruns
 # X11 theme stuff
