--- a/dot_config/hypr/conf.d/binds.conf
+++ b/dot_config/hypr/conf.d/binds.conf
@@ -1,11 +1,3 @@
-# Set programs that you use
-$run_app = app2unit --
-$term = $run_app $TERMINAL
-$term_exec = $run_app $TERMINAL_EXEC
-$file_manager = $term_exec lfcd_sh
-# $menu = $run_app mdmenu_run | xargs hyprctl dispatch exec --
-$menu = $run_app fuzzel
-
 # Key bindings
 #
 # Mod list: SHIFT CAPS CTRL/CONTROL ALT MOD2 MOD3 SUPER/WIN/LOGO/MOD4 MOD5
@@ -103,10 +95,10 @@ bind = $mod+CONTROL,  backspace, exec, $run_app swaync-client -t -sw # show noti
 #
 # Screenshots:
 #
-bind = $mod+SHIFT,  S, exec, $run_app killall slurp; screenshots "snip"
-bind = ,            Print, exec, $run_app killall slurp; screenshots "snip-edit"
-bind = $mod,        Print, exec, $run_app screenshots
-bind = $mod+SHIFT,  Print, exec, $run_app screenshots "current-save"
+bind = $mod+SHIFT,  S, exec, $run_app grimblast copy area --freeze --notify
+bind = ,            Print, exec, $run_app grimblast edit area --freeze
+bind = $mod,        Print, exec, $run_app grimblast copysave output --notify
+bind = $mod+SHIFT,  Print, exec, $run_app grimblast copysave screen --notify
 
 #
 # Movement:
