feat(gtk): change gtk theme to adw-gtk
Signed-off-by: JoaoCostaIFG <me@joaocosta.dev>

--- a/dot_config/fontconfig/fonts.conf
+++ b/dot_config/fontconfig/fonts.conf
@@ -1,6 +1,18 @@
 <?xml version='1.0'?>
 <!DOCTYPE fontconfig SYSTEM 'fonts.dtd'>
 <fontconfig>
+  <dir>~/.fonts</dir>
+  <match target="font">
+    <edit name="hinting" mode="assign">
+      <bool>false</bool>
+    </edit>
+  </match>
+  <match target="font">
+    <edit name="hintstyle" mode="assign">
+    <const>hintslight</const>
+    </edit>
+  </match>
+
   <!-- Set preferred serif, sans-serif, and monospace fonts. -->
   <alias>
     <family>serif</family>
@@ -37,6 +49,17 @@
       <family>Symbola</family>
     </prefer>
   </alias>
+
+  <match target="font">
+    <edit name="rgba" mode="assign">
+    <const>rgb</const>
+    </edit>
+  </match>
+  <match target="font">
+    <edit name="antialias" mode="assign">
+    <bool>true</bool>
+    </edit>
+  </match>
 
   <!-- Aliases for commonly used MS fonts. -->
   <match>
