--- a/dot_config/hypr/conf.d/env.conf
+++ b/dot_config/hypr/conf.d/env.conf
@@ -3,6 +3,14 @@
 env = XDG_CURRENT_DESKTOP,Hyprland
 env = XDG_SESSION_TYPE,wayland
 env = XDG_SESSION_DESKTOP,Hyprland
+
 # cursor theme
-# env = HYPRCURSOR_THEME,Nordzy-cursors-hyprcursor
 env = XCURSOR_SIZE,24
+env = HYPRCURSOR_SIZE,24
+env = XCURSOR_THEME,XCursor-Pro-Dark
+env = HYPRCURSOR_THEME,XCursor-Pro-Dark-Hyprcursor
+
+# X11 theme stuff
+exec = xrdb -load "$HOME/.Xdefaults"
+# theme settings for GTK 4
+exec = import-gsettings
