--- a/dot_config/hypr/conf.d/settings.conf
+++ b/dot_config/hypr/conf.d/settings.conf
@@ -54,8 +54,10 @@ decoration {
 
     blur {
         enabled = true
-        size = 3
-        passes = 1
+        size = 5
+        passes = 3
+        popups = true
+        input_methods = true
     }
 
     shadow {
