--- a/dot_config/xsettingsd/xsettingsd.conf
+++ b/dot_config/xsettingsd/xsettingsd.conf
@@ -1,6 +1,6 @@
-Net/ThemeName "Catppuccin-Dark"
-Net/IconThemeName "Catppuccin-Mocha"
-Gtk/CursorThemeName "Adwaita"
+Net/ThemeName "adw-gtk3-dark"
+Net/IconThemeName "Papirus-Dark"
+Gtk/CursorThemeName "XCursor-Pro-Dark"
 Net/EnableEventSounds 1
 EnableInputFeedbackSounds 0
 Xft/Antialias 1
