feat(fonts): change to noto to solve emoji problems
Signed-off-by: JoaoCostaIFG <me@joaocosta.dev>

--- a/dot_config/fontconfig/fonts.conf
+++ b/dot_config/fontconfig/fonts.conf
@@ -9,97 +9,111 @@
   </match>
   <match target="font">
     <edit name="hintstyle" mode="assign">
-    <const>hintslight</const>
+      <const>hintslight</const>
     </edit>
   </match>
-
   <!-- Set preferred serif, sans-serif, and monospace fonts. -->
   <alias>
     <family>serif</family>
     <prefer>
-      <family>Twemoji</family>
-      <family>Source Serif Pro</family>
+      <family>Noto Serif</family>
     </prefer>
   </alias>
   <alias>
     <family>sans-serif</family>
     <prefer>
-      <family>Twemoji</family>
-      <family>Source Sans Pro</family>
+      <family>Lato</family>
+      <family>Noto Sans</family>
+      <family>Noto Sans CJK JP</family>
     </prefer>
   </alias>
   <alias>
     <family>sans</family>
     <prefer>
-      <family>Twemoji</family>
-      <family>Source Sans Pro</family>
+      <family>Lato</family>
+      <family>Noto Sans</family>
+      <family>Noto Sans CJK JP</family>
     </prefer>
   </alias>
   <alias>
     <family>monospace</family>
     <prefer>
       <family>SauceCodePro NFM</family>
-      <family>Symbola</family>
+      <family>Noto Sans Mono</family>
+      <family>Noto Sans CJK JP</family>
     </prefer>
   </alias>
   <alias>
     <family>italic</family>
     <prefer>
       <family>VictorMono NFM</family>
-      <family>Symbola</family>
+      <family>Noto Sans Mono</family>
+      <family>Noto Sans CJK JP</family>
     </prefer>
   </alias>
-
   <match target="font">
     <edit name="rgba" mode="assign">
-    <const>rgb</const>
+      <const>rgb</const>
     </edit>
   </match>
   <match target="font">
     <edit name="antialias" mode="assign">
-    <bool>true</bool>
+      <bool>true</bool>
     </edit>
   </match>
-
   <!-- Aliases for commonly used MS fonts. -->
   <match>
-    <test name="family"><string>Arial</string></test>
+    <test name="family">
+      <string>Arial</string>
+    </test>
     <edit name="family" mode="assign" binding="strong">
       <string>Liberation Sans</string>
     </edit>
   </match>
   <match>
-    <test name="family"><string>Helvetica</string></test>
+    <test name="family">
+      <string>Helvetica</string>
+    </test>
     <edit name="family" mode="assign" binding="strong">
       <string>Liberation Sans</string>
     </edit>
   </match>
   <match>
-    <test name="family"><string>Verdana</string></test>
+    <test name="family">
+      <string>Verdana</string>
+    </test>
     <edit name="family" mode="assign" binding="strong">
       <string>DejaVu Sans</string>
     </edit>
   </match>
   <match>
-    <test name="family"><string>Tahoma</string></test>
+    <test name="family">
+      <string>Tahoma</string>
+    </test>
     <edit name="family" mode="assign" binding="strong">
       <string>Liberation Sans</string>
     </edit>
   </match>
   <match>
-    <test name="family"><string>Times New Roman</string></test>
+    <test name="family">
+      <string>Times New Roman</string>
+    </test>
     <edit name="family" mode="assign" binding="strong">
       <string>Liberation Serif</string>
     </edit>
   </match>
   <match>
-    <test name="family"><string>Times</string></test>
+    <test name="family">
+      <string>Times</string>
+    </test>
     <edit name="family" mode="assign" binding="strong">
       <string>DejaVu Serif</string>
     </edit>
   </match>
   <match>
-    <test name="family"><string>Courier New</string></test>
+    <test name="family">
+      <string>Courier New</string>
+    </test>
     <edit name="family" mode="assign" binding="strong">
       <string>Liberation Mono</string>
     </edit>
