--- a/dot_config/gtk-3.0/settings.ini
+++ b/dot_config/gtk-3.0/settings.ini
@@ -1,7 +1,7 @@
 [Settings]
 gtk-theme-name=adw-gtk3-dark
 gtk-icon-theme-name=Papirus-Dark
-gtk-font-name=Source Han Sans 11
+gtk-font-name=Lato 11
 gtk-cursor-theme-name=XCursor-Pro-Dark
 gtk-cursor-theme-size=24
 gtk-toolbar-style=GTK_TOOLBAR_ICONS
