feat: use swappy instead of gimp to edit screenshots
Signed-off-by: JoaoCostaIFG <me@joaocosta.dev>

--- a/dot_config/hypr/conf.d/binds.conf
+++ b/dot_config/hypr/conf.d/binds.conf
@@ -96,7 +96,7 @@ bind = $mod+CONTROL,  backspace, exec, $run_app swaync-client -t -sw # show noti
 # Screenshots:
 #
 bind = $mod+SHIFT,  S, exec, $run_app grimblast copy area --freeze --notify
-bind = ,            Print, exec, $run_app grimblast edit area --freeze
+bind = ,            Print, exec, $run_app grimblast save area --freeze - | swappy -f -
 bind = $mod,        Print, exec, $run_app grimblast copysave output --notify
 bind = $mod+SHIFT,  Print, exec, $run_app grimblast copysave screen --notify
 
