--- a/dot_config/qt5ct/qt5ct.conf
+++ b/dot_config/qt5ct/qt5ct.conf
@@ -1,19 +1,19 @@
 [Appearance]
 color_scheme_path=/usr/share/qt5ct/colors/darker.conf
 custom_palette=true
-icon_theme=breeze-dark
-standard_dialogs=default
-style=Breeze
+icon_theme=Papirus-Dark
+standard_dialogs=xdgdesktopportal
+style=kvantum-dark
 
 [Fonts]
-fixed="Sans Serif,9,-1,5,50,0,0,0,0,0"
+fixed="Monospace,9,-1,5,50,0,0,0,0,0"
 general="Sans Serif,9,-1,5,50,0,0,0,0,0"
 
 [Interface]
-activate_item_on_single_click=1
+activate_item_on_single_click=2
 buttonbox_layout=0
 cursor_flash_time=1000
-dialog_buttons_have_icons=1
+dialog_buttons_have_icons=2
 double_click_interval=400
 gui_effects=@Invalid()
 keyboard_scheme=2
@@ -21,11 +21,11 @@ menus_have_icons=true
 show_shortcuts_in_context_menus=true
 stylesheets=@Invalid()
 toolbutton_style=4
-underline_shortcut=1
+underline_shortcut=0
 wheel_scroll_lines=3
 
 [SettingsWindow]
-geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\0\0\0\0\0\0\0\x4\xf7\0\0\x2\xb7\0\0\0\0\0\0\0\0\0\0\x4\xf7\0\0\x2\xb7\0\0\0\x1\x2\0\0\0\x4\x38\0\0\0\0\0\0\0\0\0\0\x4\xf7\0\0\x2\xb7)
+geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\x4\x38\0\0\x1\xe0\0\0\t/\0\0\x4\x98\0\0\0\0\0\0\0\0\0\0\x4\xff\0\0\x2\xc0\0\0\0\0\x2\0\0\0\n\0\0\0\x4\x38\0\0\x1\xe0\0\0\t/\0\0\x4\x98)
 
 [Troubleshooting]
 force_raster_widgets=1
