--- a/dot_config/qt6ct/qt6ct.conf
+++ b/dot_config/qt6ct/qt6ct.conf
@@ -1,19 +1,19 @@
 [Appearance]
 color_scheme_path=/home/joao/.config/qt6ct/style-colors.conf
 custom_palette=true
-icon_theme=Catppuccin-Mocha
-standard_dialogs=default
+icon_theme=Papirus-Dark
+standard_dialogs=xdgdesktopportal
 style=kvantum-dark
 
 [Fonts]
-fixed="Monospace,12,-1,5,400,0,0,0,0,0,0,0,0,0,0,1"
-general="Sans Serif,12,-1,5,400,0,0,0,0,0,0,0,0,0,0,1"
+fixed="Monospace,9,-1,5,400,0,0,0,0,0,0,0,0,0,0,1"
+general="Sans Serif,9,-1,5,400,0,0,0,0,0,0,0,0,0,0,1"
 
 [Interface]
 activate_item_on_single_click=1
 buttonbox_layout=0
 cursor_flash_time=1000
-dialog_buttons_have_icons=1
+dialog_buttons_have_icons=2
 double_click_interval=400
 gui_effects=@Invalid()
 keyboard_scheme=2
@@ -25,7 +25,7 @@ underline_shortcut=1
 wheel_scroll_lines=3
 
 [SettingsWindow]
-geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\x4\x38\0\0\x1\xe0\0\0\t/\0\0\x4\x97\0\0\x4\x38\0\0\x1\xe0\0\0\t/\0\0\x4\x97\0\0\0\0\x2\0\0\0\n\0\0\0\x4\x38\0\0\x1\xe0\0\0\t/\0\0\x4\x97)
+geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\x4\x38\0\0\x1\xe0\0\0\x6\xaf\0\0\x4\x98\0\0\x4\x38\0\0\x1\xe0\0\0\x6\xaf\0\0\x4\x98\0\0\0\0\x2\0\0\0\n\0\0\0\x4\x38\0\0\x1\xe0\0\0\x6\xaf\0\0\x4\x98)
 
 [Troubleshooting]
 force_raster_widgets=1
