feat: update new version of hyprtags
Update hyprland config to support new version of my hyprtags plugin.

Signed-off-by: JoaoCostaIFG <me@joaocosta.dev>

--- a/dot_config/hypr/conf.d/plugins.conf
+++ b/dot_config/hypr/conf.d/plugins.conf
@@ -3,7 +3,7 @@ exec-once = hyprpm reload -n
 
 plugin {
     # for xwayland
-    # Replaces and improves: exec=rxrandr --output "DP-1" --primary
+    # Replaces and improves: exec=xrandr --output "DP-1" --primary
     xwaylandprimary {
         display = DP-1
     }
