refactor: major cleanup of old files + vicinae
Signed-off-by: JoaoCostaIFG <me@joaocosta.dev>

--- a/dot_config/hypr/conf.d/apps.conf
+++ b/dot_config/hypr/conf.d/apps.conf
@@ -3,8 +3,7 @@ $run_app = app2unit --
 $term = $run_app $TERMINAL
 $term_exec = $run_app $TERMINAL_EXEC
 $file_manager = $term_exec lfcd_sh
-# $menu = $run_app mdmenu_run | xargs hyprctl dispatch exec --
-$menu = $run_app fuzzel
+$menu = $run_app vicinae
 
 # top bar
 exec-once = $run_app waybar
@@ -22,18 +21,14 @@ exec-once = $run_app swaync
 exec-once = $run_app udiskie
 # playerctl daemon
 exec-once = $run_app playerctld
-
 # email client
 exec-once = $run_app thunderbird
-# clipboard manager
-exec-once = $run_app clipse -listen
 # bluetooth manager
 exec-once = $run_app blueman-applet
+# remote desktop
+exec-once = $run_app sunshine
+# menu
+exec-once = $run_app vicinae server
 # easy effects
 # exec-once = $run_app easyeffects --gapplication-service
 
-# ifgdt apps
-# open rgb sakura theme
-exec-once = $run_app openrgb -p Sakura
-# XPPen drawing table
-# exec-once = $run_app QT_QPA_PLATFORM="xcb" /usr/lib/pentablet/PenTablet.sh /mini
