--- a/dot_config/kitty/kitty.conf
+++ b/dot_config/kitty/kitty.conf
@@ -2663,8 +2663,7 @@ map shift+cmd+i     set_tab_title
 
 #: }}}
 
-
 # BEGIN_KITTY_THEME
-# Nord
+# Rosé Pine
 include current-theme.conf
 # END_KITTY_THEME
