--- a/dot_config/qt5ct/qt5ct.conf
+++ b/dot_config/qt5ct/qt5ct.conf
@@ -1,9 +1,9 @@
 [Appearance]
-color_scheme_path=/usr/share/qt5ct/colors/darker.conf
+color_scheme_path=/home/joao/.config/qt5ct/colors/noctalia.conf
 custom_palette=true
 icon_theme=Papirus-Dark
 standard_dialogs=xdgdesktopportal
-style=kvantum-dark
+style=Breeze
 
 [Fonts]
 fixed="Monospace,9,-1,5,50,0,0,0,0,0"
@@ -25,7 +25,7 @@ underline_shortcut=0
 wheel_scroll_lines=3
 
 [SettingsWindow]
-geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\x4\x38\0\0\x1\xe0\0\0\t/\0\0\x4\x98\0\0\0\0\0\0\0\0\0\0\x4\xff\0\0\x2\xc0\0\0\0\0\x2\0\0\0\n\0\0\0\x4\x38\0\0\x1\xe0\0\0\t/\0\0\x4\x98)
+geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\x4\x38\0\0\x1\xe0\0\0\t/\0\0\x4\x95\0\0\x4\x38\0\0\x1\xe0\0\0\t7\0\0\x4\x9d\0\0\0\0\x2\0\0\0\n\0\0\0\x4\x38\0\0\x1\xe0\0\0\t/\0\0\x4\x95)
 
 [Troubleshooting]
 force_raster_widgets=1
