--- a/dot_config/qt6ct/qt6ct.conf
+++ b/dot_config/qt6ct/qt6ct.conf
@@ -1,9 +1,9 @@
 [Appearance]
-color_scheme_path=/home/joao/.config/qt6ct/style-colors.conf
+color_scheme_path=/home/joao/.config/qt6ct/colors/noctalia.conf
 custom_palette=true
 icon_theme=Papirus-Dark
 standard_dialogs=xdgdesktopportal
-style=kvantum-dark
+style=Breeze
 
 [Fonts]
 fixed="Monospace,9,-1,5,400,0,0,0,0,0,0,0,0,0,0,1"
@@ -25,7 +25,7 @@ underline_shortcut=1
 wheel_scroll_lines=3
 
 [SettingsWindow]
-geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\x4\x38\0\0\x1\xe0\0\0\x6\xaf\0\0\x4\x98\0\0\x4\x38\0\0\x1\xe0\0\0\x6\xaf\0\0\x4\x98\0\0\0\0\x2\0\0\0\n\0\0\0\x4\x38\0\0\x1\xe0\0\0\x6\xaf\0\0\x4\x98)
+geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\x4\x38\0\0\x1\xe0\0\0\t/\0\0\x4\x95\0\0\x4\x38\0\0\x1\xe0\0\0\t/\0\0\x4\x95\0\0\0\0\x2\0\0\0\n\0\0\0\x4\x38\0\0\x1\xe0\0\0\t/\0\0\x4\x95)
 
 [Troubleshooting]
 force_raster_widgets=1
