feat: migrate from waybar/swaync to quickshell for desktop UI
Add noctalia-shell submodule and configure quickshell as the new
top bar solution. Archive old waybar, swaync, and fuzzel configs
to preserve history while cleaning up active configuration.
Update hyprland settings to use quickshell and remove deprecated
UI components like blueman-applet and swaync daemon.

Signed-off-by: JoaoCostaIFG <me@joaocosta.dev>

--- a/.gitmodules
+++ b/.gitmodules
@@ -5,3 +5,6 @@
 [submodule "dotbot-gh-extension"]
 	path = submodules/dotbot-gh-extension
 	url = https://github.com/fundor333/dotbot-gh-extension.git
+[submodule "submodules/noctalia-shell"]
+	path = submodules/noctalia-shell
+	url = https://github.com/noctalia-dev/noctalia-shell.git
