--- a/dot_config/hypr/conf.d/apps.conf
+++ b/dot_config/hypr/conf.d/apps.conf
@@ -5,8 +5,8 @@ $term_exec = $run_app $TERMINAL_EXEC
 $file_manager = $term_exec lfcd_sh
 $menu = $run_app vicinae
 
-# top bar
-exec-once = $run_app waybar
+# wallpaper
+exec-once = $run_app quickshell
 # wallpaper
 exec-once = $run_app hyprpaper
 # idle manager
@@ -15,16 +15,12 @@ exec-once = $run_app hypridle
 exec-once = $run_app hyprsunset
 # polkit agent
 exec-once = $run_app /usr/lib/hyprpolkitagent/hyprpolkitagent
-# notification agent
-exec-once = $run_app swaync
 # udiskie for automount
 exec-once = $run_app udiskie
 # playerctl daemon
 exec-once = $run_app playerctld
 # email client
 exec-once = $run_app thunderbird
-# bluetooth manager
-exec-once = $run_app blueman-applet
 # remote desktop
 exec-once = $run_app sunshine
 # menu
