--- a/dot_config/hypr/conf.d/settings.conf
+++ b/dot_config/hypr/conf.d/settings.conf
@@ -117,7 +117,7 @@ master {
 
 gestures {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
-    workspace_swipe = off
+    workspace_swipe_touch = off
 }
 
 misc {
