feat: add conditional config support with dotbot-if plugin
Integrate dotbot-if submodule to enable hostname-based conditional
configuration loading. Reorganize Hypr override configs into
hostname-specific directories and add gitignore for local overrides
to support multi-machine dotfile management.

Signed-off-by: JoaoCostaIFG <me@joaocosta.dev>

--- a/.gitmodules
+++ b/.gitmodules
@@ -8,3 +8,6 @@
 [submodule "submodules/noctalia-shell"]
 	path = submodules/noctalia-shell
 	url = https://github.com/noctalia-dev/noctalia-shell.git
+[submodule "submodules/dotbot-if"]
+	path = submodules/dotbot-if
+	url = https://github.com/mikybars/dotbot-if.git
