--- a/dot_config/kitty/kitty.conf
+++ b/dot_config/kitty/kitty.conf
@@ -2663,7 +2663,5 @@ map shift+cmd+i     set_tab_title
 
 #: }}}
 
-# BEGIN_KITTY_THEME
-# Rosé Pine
-include current-theme.conf
-# END_KITTY_THEME
+# Matugen generated theme
+include matugen.conf
